--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: php
 
 before_script:
     - composer install
-script: php wrapper.php --url=https://bootjp.me
+script: php wrapper.php
 php:
   - 5.6
   - 7
