--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,7 @@
 build:
   dependencies:
     before:
-      - pecl install ssh-beta
+      - composer install
 checks:
   php:
     code_rating: true
